cart design fixes

--- a/src/app/home/shop/cart/cart.component.html
+++ b/src/app/home/shop/cart/cart.component.html
@@ -15,13 +15,13 @@
 
   <ion-item-divider>
     <ion-row style="margin-bottom: 8px">
-      <ion-col size="10" class="user-dtls">
+      <ion-col size="11" class="user-dtls">
         <ion-card-subtitle class="username">Deliver to: <b>John Deo</b></ion-card-subtitle>
         <ion-card-subtitle class="address">Katraj, Pune, Maharashtra</ion-card-subtitle>
       </ion-col>
-      <ion-col size="2">
+      <ion-col size="1">
         <!-- <ion-button  shape="round"></ion-button> -->
-        <ion-button class="address-btn" fill="outline">Change</ion-button>
+        <ion-button  class="address-btn" fill="outline">Change</ion-button>
       </ion-col>
     </ion-row>
   </ion-item-divider>
@@ -33,13 +33,15 @@
       </ion-col>
       <ion-col size="8">
         <ion-card-title class="card-name">{{items.name}}</ion-card-title><br>
-        <ion-card-subtitle class="card-price">{{items.price}}</ion-card-subtitle><br>
+        <ion-card-subtitle class="card-price">{{items.price | currency:'INR':'symbol-narrow':'4.2-2'}}</ion-card-subtitle><br>
         <ion-card-subtitle class="card-size">Size: {{items.size}}</ion-card-subtitle>
         <ion-card-subtitle class="card-color">Color: {{items.colour}}<ion-card></ion-card></ion-card-subtitle><br>
         <div class="qty-selector">
-          <ion-button fill="clear" class="qty-btn">-</ion-button>
-          <ion-label class="qty-btn">{{items.quantity}}</ion-label>
-          <ion-button fill="clear" class="qty-btn">+</ion-button>
+          <button class="qty-btn">-</button>
+          <!-- <ion-button fill="clear" class="qty-btn">-</ion-button> -->
+          <ion-label class="qty-count">{{items.quantity}}</ion-label>
+          <!-- <ion-button fill="clear" class="qty-btn">+</ion-button> -->
+          <button class="qty-btn">+</button>
         </div>
       </ion-col>
     </ion-row>
