--- a/src/app/home/shop/cart/cart.component.css
+++ b/src/app/home/shop/cart/cart.component.css
@@ -1,5 +1,5 @@
 .address-btn {
-    margin: 13px 0px 0px 13px;
+    margin: 13px 0px 0px 5px;
     font-size: 12px;
     --border-color: #0000002b;
     color: #00000096;
@@ -11,7 +11,11 @@
 }
 
 .cart-count {
-    margin: 8px 0px 0px 18px;
+    background: #607d8b42;
+    border-radius: 20px;
+    text-align: center;
+    padding: 5px;
+    margin: 8px 50px 0px 50px;
 }
 
 .img {
@@ -44,9 +48,9 @@ img {
 }
 
 .qty-selector {
-    background: #9e9e9e5e;
-    width: 100px;
-    margin-top: -30px;
+    /* background: #9e9e9e5e; */
+    /* width: 100px; */
+    margin-top: -27px;
     height: 27px;
 }
 
@@ -76,6 +80,19 @@ img {
     /* margin-top: -4px;
     margin-left: 4px; */
     margin: -3px 0px 0px 2px;
+    border-radius: 12px;
+    font-size: 21px;
+    /* background: aquamarine; */
+    width: 33px;
+}
+
+.qty-btn:hover {
+    background: #e972095b;
+}
+
+.qty-count {
+    font-size: 16px;
+    margin: 10px;
 }
 
 .address {
@@ -119,9 +136,9 @@ hr {
 
 .order-btn {
     display: inline-grid;
-    /* align-self: baseline; */
-    margin: 5px 10px 10px 120px;
+    margin: 5px 10px 10px 148px;
     font-size: 12px;
+    font-weight: 600;
 }
 
 .cart-price {
