user profile and design fixes

--- a/src/app/home/shop/category-wise-productdetail/category-wise-productdetail.component.html
+++ b/src/app/home/shop/category-wise-productdetail/category-wise-productdetail.component.html
@@ -22,12 +22,12 @@
     <h1 class="title">{{ this.res }}'s Collection</h1>
     <ion-row class="favorite-items">
       <ion-col size="6" class="ion-text-left">
-        <!-- <ion-card> -->
+        <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
           <img
             src="../../assets/women-blazzer1.jpg"
             (click)="goToProductDetail()"/>
-          <!-- </ion-card> -->
-        <p class="item-name"><b>$30.00 &nbsp;&nbsp;Shirt</b></p>
+            <p class="item-name"><b>$30.00 &nbsp;&nbsp;Shirt</b></p>
+          </ion-card>
       </ion-col>
       <ion-col size="6" class="ion-text-left">
         <!-- <ion-card> -->
