--- a/src/app/home/shop/product-detail/product-detail.component.html
+++ b/src/app/home/shop/product-detail/product-detail.component.html
@@ -122,7 +122,7 @@
       <ion-segment-button (click)="goToCart()">
         Add To Cart
       </ion-segment-button>
-      <ion-segment-button style="background: linear-gradient(45deg,rgb(255, 193, 7), rgb(248, 87, 31)); color: beige;">
+      <ion-segment-button (click)="buyNow()" style="background: linear-gradient(45deg,rgb(255, 193, 7), rgb(248, 87, 31)); color: beige;">
         Buy Now
       </ion-segment-button>
     </ion-segment>
