--- a/src/app/home/shop/shop.component.html
+++ b/src/app/home/shop/shop.component.html
@@ -48,7 +48,7 @@
           <ion-icon  name="cart-outline"></ion-icon>
         </ion-tab-button> 
         
-        <ion-tab-button >  
+        <ion-tab-button (click)="goToProfile()">  
           <ion-icon  name="person-outline"></ion-icon>
         </ion-tab-button> 
         
