--- a/src/app/home/user/user-profile/user-profile.component.html
+++ b/src/app/home/user/user-profile/user-profile.component.html
@@ -26,55 +26,19 @@
   <ion-row>
     <ion-col></ion-col>
     <ion-col>  <span class="circle">
-      <img src="https://c1.staticflickr.com/5/4023/5154094149_8c1345f634.jpg">
-      <ion-icon class="edit" name="create-outline"></ion-icon>
+      <img src="https://images.pexels.com/photos/771742/pexels-photo-771742.jpeg?cs=srgb&dl=pexels-mohamed-abdelghaffar-771742.jpg&fm=jpg">
+      <!-- <ion-icon class="edit" name="create-outline"></ion-icon> -->
       <h5>Johny Deo</h5>
       <h6>Pune,Maharashtra</h6>
     </span></ion-col>
     <ion-col></ion-col>
   </ion-row>
   <ion-card class="content-sharp">
-    <ion-card-content>
-      <ion-item >
-        <ion-icon name="clipboard-sharp" slot="start"></ion-icon>
+    <ion-card-content *ngFor="let items of profileSettings">
+      <ion-item lines="none" class="item-inner">
+        <ion-icon name={{items.icon}} slot="start"></ion-icon>
         <ion-label>
-          <h3>My Orders</h3>
-         
-        </ion-label>
-        <ion-icon name="chevron-forward-sharp"></ion-icon>
-      </ion-item>
-      
-      <ion-item >
-        <ion-icon name="card" slot="start"></ion-icon>
-        <ion-label>
-          <h3>Payment</h3>
-         
-        </ion-label>
-        <ion-icon name="chevron-forward-sharp"></ion-icon>
-      </ion-item>
-      
-      <ion-item  >
-        <ion-icon name="heart" slot="start"></ion-icon>
-        <ion-label>
-          <h3>Favourites</h3>
-        
-        </ion-label>
-        <ion-icon name="chevron-forward-sharp"></ion-icon>
-      </ion-item>
-      
-      <ion-item  >
-        <ion-icon name="lock-closed" slot="start"></ion-icon>
-        <ion-label>
-          <h3>Change Password</h3>
-          
-        </ion-label>
-        <ion-icon name="chevron-forward-sharp"></ion-icon>
-      </ion-item>
-      
-      <ion-item  >
-        <ion-icon name="create-sharp" slot="start"></ion-icon>
-        <ion-label>
-          <h3>Edit Profile</h3>
+          <h3>{{items.displayName}}</h3>
          
         </ion-label>
         <ion-icon name="chevron-forward-sharp"></ion-icon>
@@ -82,12 +46,6 @@
     </ion-card-content>
     </ion-card>
 </div>
-
-    <!-- <img
-      alt="Silhouette of mountains"
-      src="https://images.unsplash.com/photo-1528698827591-e19ccd7bc23d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1176&q=80"
-    /> -->
-
 </ion-content>
 
 <ion-footer>
