--- a/src/app/home/user/user-profile/user-profile.component.html
+++ b/src/app/home/user/user-profile/user-profile.component.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <button style="background: white" ion-button icon-only (click)="back()">
-        <ion-icon name="chevron-back-outline"></ion-icon>
-      </button>
+      <!-- <button style="background: white" ion-button icon-only (click)="back()"> -->
+        <ion-icon name="chevron-back-outline" (click)="back()"></ion-icon>
+      <!-- </button> -->
     </ion-buttons>
 
     <div class="addressContent">
