--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -1,12 +1,10 @@
-<!-- <ion-header>
-</ion-header> -->
-<p class="ion-text-right" id="skip" routerLink="/home/shop" >Skip</p>
-
 <ion-content class="ion-padding ion-text-center">
+  <p class="ion-text-right" id="skip" routerLink="/home/shop" >Skip</p>
+
   <div class="container">
     <div class="page-header">
       <h1 >Welcome to Aapl Market</h1>
-      <h4>Explore Us</h4>
+      <!-- <h4>Explore Us</h4> -->
     </div>
     <img src="../../assets/welcome.png" />
     <div class="button-container">
