--- a/src/app/home/shop/buy-now/buy-now.component.html
+++ b/src/app/home/shop/buy-now/buy-now.component.html
@@ -1,16 +1,16 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <button style="background: white;" ion-button icon-only (click)="back()">
-        <ion-icon name="chevron-back-outline"></ion-icon>
-      </button>
+      <!-- <button style="background: white;" ion-button icon-only (click)="back()"> -->
+        <ion-icon class="h-icon" name="chevron-back-outline" (click)="back()"></ion-icon>
+      <!-- </button> -->
     </ion-buttons>
 
     <ion-buttons slot="end" large>
-      <ion-icon name="cart-sharp"></ion-icon>
+      <ion-icon class="h-icon" name="cart-sharp"></ion-icon>
     </ion-buttons>
     <ion-buttons slot="end" large>
-      <ion-icon name="notifications-sharp"></ion-icon>
+      <ion-icon class="h-icon" name="notifications-sharp"></ion-icon>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -106,7 +106,7 @@
   <ion-toolbar>
     <ion-row>
       <ion-col size="12">
-        <ion-button class="order-btn" shape="round" color="warning">Place order</ion-button>
+        <ion-button (click)="orderPlaced()" style=" --background:#e97109;" class="order-btn" shape="round">Place order</ion-button>
       </ion-col>
     </ion-row>
   </ion-toolbar>
