--- a/src/app/home/shop/cart/cart.component.css
+++ b/src/app/home/shop/cart/cart.component.css
@@ -11,7 +11,7 @@
 }
 
 .cart-count {
-    background: #607d8b42;
+    background: #607d8b2b;
     border-radius: 20px;
     text-align: center;
     padding: 5px;
@@ -26,8 +26,8 @@
 }
 
 img {
-    max-width: 70%;
-    margin: 6px 0px 0px 21px;
+    max-width: 81%;
+    margin: 11px 0px 0px 6px;
 }
 
 .img-card {
@@ -48,10 +48,7 @@ img {
 }
 
 .qty-selector {
-    /* background: #9e9e9e5e; */
-    /* width: 100px; */
-    margin-top: -27px;
-    height: 27px;
+    margin: -33px 0px 0px -5px;
 }
 
 .card-name {
@@ -73,17 +70,15 @@ img {
 }
 
 .main-card {
-    height: 125px;
+    height: 115px;
 }
 
 .qty-btn {
-    /* margin-top: -4px;
-    margin-left: 4px; */
     margin: -3px 0px 0px 2px;
     border-radius: 12px;
-    font-size: 21px;
-    /* background: aquamarine; */
+    font-size: 16px;
     width: 33px;
+    font-weight: bold;
 }
 
 .qty-btn:hover {
@@ -139,10 +134,15 @@ hr {
     margin: 5px 10px 10px 148px;
     font-size: 12px;
     font-weight: 600;
+    --background: var(--ion-color-btn);
 }
 
 .cart-price {
     margin: 15px 0px 0px 0px;
     font-weight: 700;
     font-size: 17px;
+}
+
+ion-item-divider{
+    background:#607d8b12;
 }
