--- a/src/app/home/shop/cart/cart.component.html
+++ b/src/app/home/shop/cart/cart.component.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <button style="background: white;" ion-button icon-only (click)="back()">
-        <ion-icon name="chevron-back-outline"></ion-icon>
-      </button>
+      <!-- <button style="background: white;" ion-button icon-only (click)="back()"> -->
+        <ion-icon class="h-icon" name="chevron-back-outline" (click)="back()"></ion-icon>
+      <!-- </button> -->
     </ion-buttons>
     <ion-buttons slot="end" large>
-      <ion-icon name="cart-sharp"></ion-icon>
+      <ion-icon class="h-icon" name="cart-sharp"></ion-icon>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -28,10 +28,10 @@
   <p class="cart-count"><b>3 </b>items in your shopping cart</p>
   <ion-card class="main-card" *ngFor="let items of demo">
     <ion-row>
-      <ion-col class="img-card" size="4">
+      <ion-col class="img-card" size="3">
         <img src="../../assets/tshirt.png" />
       </ion-col>
-      <ion-col size="8">
+      <ion-col size="9">
         <ion-card-title class="card-name">{{items.name}}</ion-card-title><br>
         <ion-card-subtitle class="card-price">{{items.price | currency:'INR':'symbol-narrow':'4.2-2'}}</ion-card-subtitle><br>
         <ion-card-subtitle class="card-size">Size: {{items.size}}</ion-card-subtitle>
@@ -91,7 +91,7 @@
         <span style="margin-left: 10px;">$1500</span>
       </ion-col>
       <ion-col size="9">
-        <ion-button class="order-btn" shape="round" color="warning">Place order</ion-button>
+        <ion-button (click)="orderPlaced()" style=" --background:#e97109;" class="order-btn" shape="round">Place order</ion-button>
       </ion-col>
     </ion-row>
   </ion-toolbar>
