--- a/src/app/home/shop/category-wise-productdetail/category-wise-productdetail.component.html
+++ b/src/app/home/shop/category-wise-productdetail/category-wise-productdetail.component.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <button style="background: white" ion-button icon-only (click)="back()">
-        <ion-icon name="chevron-back-outline"></ion-icon>
-      </button>
+      <!-- <button style="background: white" ion-button icon-only (click)="back()"> -->
+        <ion-icon class="h-icon" name="chevron-back-outline" (click)="back()"></ion-icon>
+      <!-- </button> -->
     </ion-buttons>
 
     <!-- <ion-input class="search-bar" placeholder="Type something here">
@@ -12,7 +12,7 @@
 
     <!-- <ion-searchbar class="custom" placeholder="Search Your Product"></ion-searchbar> -->
     <ion-buttons slot="end" large>
-      <ion-icon name="cart-sharp"></ion-icon>
+      <ion-icon class="h-icon" name="cart-sharp"></ion-icon>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
