--- a/src/app/home/shop/shop.component.html
+++ b/src/app/home/shop/shop.component.html
@@ -7,19 +7,19 @@
     <div class="addressContent">
       <ion-row>
         <ion-col>
-          <ion-label class="yloc current-location" routerLink="../location">{{userLocation.description || 'Loading location...'}}
+          <ion-label class="yloc current-location h-icon" routerLink="../location">{{userLocation.description || 'Loading location...'}}
           </ion-label>
-          <ion-icon class="chevron-down" name="chevron-down-outline"></ion-icon>
+          <ion-icon  class="chevron-down h-icon" name="chevron-down-outline"></ion-icon>
         </ion-col>
       </ion-row>
     </div>
 
     <!-- <ion-searchbar class="custom" placeholder="Search Your Product"></ion-searchbar> -->
     <ion-buttons slot="end" large>
-      <ion-icon name="cart-sharp"></ion-icon>
+      <ion-icon class="h-icon" name="cart-sharp"></ion-icon>
     </ion-buttons>
     <ion-buttons slot="end" large>
-      <ion-icon name="notifications-sharp"></ion-icon>
+      <ion-icon class="h-icon" name="notifications-sharp"></ion-icon>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
