--- a/src/app/public/login/login.page.css
+++ b/src/app/public/login/login.page.css
@@ -7,7 +7,11 @@
 
 .page-header h1 {
     margin-top: 0;
-    color: #f37e1d
+    color: #e97109
+}
+
+.page-header h4{
+    color: rgba(0, 0, 0, 0.409);
 }
 
 .button-container {
@@ -22,9 +26,10 @@ ion-header p {
 }
 
 .main-button {
-    --background: linear-gradient(45deg,
+    /* --background: linear-gradient(45deg,
             rgb(255, 193, 7),
-            rgb(248, 87, 31));
+            rgb(248, 87, 31)); */
+    --background: #e97109;
     box-shadow: 0px 20px 20px -17px rgb(248, 87, 31);
     position: relative;
     height: 50px;
@@ -32,6 +37,6 @@ ion-header p {
 }
 
 #skip {
-    color: darkorange;
+    color: #e97109;
     margin-right: 10px;
 }
