over all design changes

--- a/src/app/home/shop/buy-now/buy-now.component.css
+++ b/src/app/home/shop/buy-now/buy-now.component.css
@@ -181,3 +181,13 @@ hr {
     font-size: 14px;
     margin: 0px 0px 0px 0px;
 }
+
+ion-footer{
+    --ion-background-color:#e97109d6;
+    text-align: center;
+    font-size: 18px;
+}
+
+.footer-text{
+    color: white;
+}
