--- a/src/app/home/shop/buy-now/buy-now.component.html
+++ b/src/app/home/shop/buy-now/buy-now.component.html
@@ -104,10 +104,11 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-row>
+    <p class="footer-text" (click)="orderPlaced()">Place order</p>
+    <!-- <ion-row>
       <ion-col size="12">
-        <ion-button (click)="orderPlaced()" style=" --background:#e97109;" class="order-btn" shape="round">Place order</ion-button>
+        <ion-button (click)="orderPlaced()" style=" --background:#e97109d6;" class="order-btn" shape="round">Place order</ion-button>
       </ion-col>
-    </ion-row>
+    </ion-row> -->
   </ion-toolbar>
 </ion-footer>
