--- a/src/app/home/shop/product-detail/product-detail.component.css
+++ b/src/app/home/shop/product-detail/product-detail.component.css
@@ -121,15 +121,33 @@ ion-card {
     margin-left: 26px;
 }
 
-.title{
+.title {
     font-weight: 600;
     font-size: 17px;
+    margin-top: 25px;
 }
 
-.product{
-    margin-left:10px;
+.product {
+    margin-left: 10px;
     margin-top: -10px
 }
-  ion-segment-button:focus{
+
+ion-segment-button:focus {
     color: white;
-  }
+}
+
+ion-card:hover {
+    background: #e97109d6;
+    color: white;
+}
+
+.content-sharp{
+    text-align: center;
+}
+
+.headings {
+    font-weight: bold;
+    font-size: 17px;
+    margin: 18px 10px 15px 10px;
+    color: #000000d6;
+}
