header color chnages

--- a/src/app/home/shop/order-placed/order-placed.component.css
+++ b/src/app/home/shop/order-placed/order-placed.component.css
@@ -118,9 +118,9 @@ p{
     color: #00000075;
 }
 
-ion-icon{
+/* ion-icon{
     color: #ffffff;
-}
+} */
 
 .shop-more-btn{
     --background:#e97109d6;
