--- a/src/global.css
+++ b/src/global.css
@@ -291,12 +291,12 @@ ion-icon {
   }
   
   ion-header{
-    --ion-background-color:#e97109d6;
+    --ion-background-color:white;
 }
   /* HEADER CSS END */
-  ion-content{
+  /* ion-content{
     --ion-background-color:#f5f5f5de;
-}
-ion-menu-button, .h-icon{
-  color: #ffffff;
-}
+} */
+/* ion-menu-button, .h-icon{
+  color: black;
+} */
