button color change

--- a/src/app/home/shop/buy-now/buy-now.component.css
+++ b/src/app/home/shop/buy-now/buy-now.component.css
@@ -183,7 +183,7 @@ hr {
 }
 
 ion-footer{
-    --ion-background-color:#e97109d6;
+    --ion-background-color:#e97109;
     text-align: center;
     font-size: 18px;
 }
