--- a/src/app/home/shop/product-detail/product-detail.component.html
+++ b/src/app/home/shop/product-detail/product-detail.component.html
@@ -129,7 +129,7 @@
       <ion-segment-button style="color: #000000de;" (click)="goToCart()">
         Add To Cart
       </ion-segment-button>
-      <ion-segment-button (click)="buyNow()" style="background: #e97109d6; color: beige;">
+      <ion-segment-button (click)="buyNow()" style="background: #e97109; color: beige;">
         Buy Now
       </ion-segment-button>
     </ion-segment>
