--- a/src/app/home/shop/category-wise-productdetail/category-wise-productdetail.component.css
+++ b/src/app/home/shop/category-wise-productdetail/category-wise-productdetail.component.css
@@ -1,11 +1,17 @@
 .title{
     text-align: center;
+    font-weight: bold;
 
 }
  .item-name{
-    margin-left:27px;
+    text-align: center;
 }
 /* .full-content{
     background-color: #eef5f9;
     margin-top: -17px;
 } */
+
+ion-card{
+    background: whitesmoke;
+    color: black;
+}
