--- a/src/app/home/shop/order-placed/order-placed.component.html
+++ b/src/app/home/shop/order-placed/order-placed.component.html
@@ -1,20 +1,6 @@
 <!-- animated SVG made possible by www.svgator.com -->
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <!-- <button style="background: white;" ion-button icon-only (click)="back()"> -->
-      <ion-icon class="h-icon" name="chevron-back-outline" (click)="back()"></ion-icon>
-      <!-- </button> -->
-    </ion-buttons>
+<app-header></app-header>
 
-    <ion-buttons slot="end" large>
-      <ion-icon class="h-icon" name="cart-sharp"></ion-icon>
-    </ion-buttons>
-    <ion-buttons slot="end" large>
-      <ion-icon class="h-icon" name="notifications-sharp"></ion-icon>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
   <div class="content">
