--- a/src/app/home/shop/product-detail/product-detail.component.html
+++ b/src/app/home/shop/product-detail/product-detail.component.html
@@ -1,19 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <!-- <button style="background: white;" ion-button icon-only (click)="back()"> -->
-        <ion-icon class="h-icon" name="chevron-back-outline" (click)="back()"></ion-icon>
-      <!-- </button> -->
-    </ion-buttons>
+<app-header></app-header>
 
-    <ion-buttons slot="end" large>
-      <ion-icon class="h-icon" name="cart-sharp"></ion-icon>
-    </ion-buttons>
-    <ion-buttons slot="end" large>
-      <ion-icon class="h-icon" name="notifications-sharp"></ion-icon>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
   <div style="background: linear-gradient(to top, #9e9e9e33 0%, white 100%);">
