--- a/src/app/home/shop/category-wise-productdetail/category-wise-productdetail.component.html
+++ b/src/app/home/shop/category-wise-productdetail/category-wise-productdetail.component.html
@@ -1,21 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <!-- <button style="background: white" ion-button icon-only (click)="back()"> -->
-        <ion-icon class="h-icon" name="chevron-back-outline" (click)="back()"></ion-icon>
-      <!-- </button> -->
-    </ion-buttons>
+<app-header></app-header>
 
-    <!-- <ion-input class="search-bar" placeholder="Type something here">
-      <ion-icon class="search-icon" name="search-outline"></ion-icon>
-    </ion-input> -->
-
-    <!-- <ion-searchbar class="custom" placeholder="Search Your Product"></ion-searchbar> -->
-    <ion-buttons slot="end" large>
-      <ion-icon class="h-icon" name="cart-sharp"></ion-icon>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
 <!-- ----------------------------------womens collection------------------------------------ -->
 <ion-content *ngIf="womenscategory">
   <div class="full-content">
@@ -30,51 +14,46 @@
           </ion-card>
       </ion-col>
       <ion-col size="6" class="ion-text-left">
-        <!-- <ion-card> -->
+        <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
           <img
             src="../../assets/women-blazzer2.jpg"
             (click)="goToProductDetail()"/>
-          <!-- </ion-card> -->
-  
-        <p class="item-name"><b>$30.00 &nbsp;&nbsp;Shirt</b></p>
-        <h6></h6>
+            <p class="item-name"><b>$30.00 &nbsp;&nbsp;Shirt</b></p>
+          </ion-card>
+          <h6></h6>
       </ion-col>
       <ion-col size="6" class="ion-text-left">
-        <!-- <ion-card> -->
-          <img
-            src="../../assets/women-blezzer.jpg"
-            (click)="goToProductDetail()"/>
-          <!-- </ion-card> -->
-  
-        <p class="item-name"><b>$30.00 &nbsp;&nbsp;Shirt</b></p>
-      </ion-col>
-      <ion-col size="6" class="ion-text-left">
-        <!-- <ion-card> -->
-          <img
-            src="../../assets/women-blazzer2.jpg"
-            (click)="goToProductDetail()"/>
-          <!-- </ion-card> -->
-  
-        <p class="item-name"><b>$30.00 &nbsp;&nbsp;Shirt</b></p>
-      </ion-col>
-      <ion-col size="6" class="ion-text-left">
-        <!-- <ion-card> -->
+        <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
           <img
             src="../../assets/women-blazzer1.jpg"
             (click)="goToProductDetail()"/>
-          <!-- </ion-card> -->
-  
-        <p class="item-name"><b>$30.00 &nbsp;&nbsp;Shirt</b></p>
-      </ion-col>
+            <p class="item-name"><b>$30.00 &nbsp;&nbsp;Shirt</b></p>
+          </ion-card>
+        </ion-col>
       <ion-col size="6" class="ion-text-left">
-        <!-- <ion-card> -->
+        <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
           <img
-            src="../../assets/women-blezzer.jpg"
+            src="../../assets/women-blazzer2.jpg"
             (click)="goToProductDetail()"/>
-          <!-- </ion-card> -->
-  
-        <p class="item-name"><b>$30.00 &nbsp;&nbsp;Shirt</b></p>
-      </ion-col>
+            <p class="item-name"><b>$30.00 &nbsp;&nbsp;Shirt</b></p>
+          </ion-card>
+        </ion-col>
+      <ion-col size="6" class="ion-text-left">
+        <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
+          <img
+            src="../../assets/women-blazzer1.jpg"
+            (click)="goToProductDetail()"/>
+            <p class="item-name"><b>$30.00 &nbsp;&nbsp;Shirt</b></p>
+          </ion-card>
+        </ion-col>
+      <ion-col size="6" class="ion-text-left">
+        <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
+          <img
+            src="../../assets/women-blazzer1.jpg"
+            (click)="goToProductDetail()"/>
+            <p class="item-name"><b>$30.00 &nbsp;&nbsp;Shirt</b></p>
+          </ion-card>
+        </ion-col>
     </ion-row>
   </div>
  
@@ -84,45 +63,45 @@
   <h1 class="title">{{ this.res }}'s Collection</h1>
   <ion-row class="favorite-items">
     <ion-col size="6" class="ion-text-left">
-      <!-- <ion-card> -->
+      <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
         <img src="../../assets/tshirt.png" (click)="goToProductDetail()"/>
-      <!-- </ion-card> -->
+      </ion-card>
       <p class="item-name"><b>$34.00 &nbsp;&nbsp;men t-shirt</b></p>
     </ion-col>
     <ion-col size="6" class="ion-text-left">
-      <!-- <ion-card> -->
+      <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
         <img src="../../assets/tshirt2.jpg" (click)="goToProductDetail()"/>
-      <!-- </ion-card> -->
+      </ion-card>
 
       <p class="item-name"><b>$34.00 &nbsp;&nbsp;men t-shirt</b></p>
       <h6></h6>
     </ion-col>
     <ion-col size="6" class="ion-text-left">
-      <!-- <ion-card> -->
+      <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
         <img src="../../assets/tshirt2.jpg" (click)="goToProductDetail()"/>
-      <!-- </ion-card> -->
+      </ion-card>
 
       <p class="item-name"><b>$34.00 &nbsp;&nbsp;men t-shirt</b></p>
     </ion-col>
     <ion-col size="6" class="ion-text-left">
-      <!-- <ion-card> -->
+      <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
         <img src="../../assets/tshirt.png" (click)="goToProductDetail()"
       />
-    <!-- </ion-card> -->
+    </ion-card>
 
       <p class="item-name"><b>$34.00 &nbsp;&nbsp;men t-shirt</b></p>
     </ion-col>
     <ion-col size="6" class="ion-text-left">
-      <!-- <ion-card> -->
+      <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
         <img src="../../assets/tshirt.png" (click)="goToProductDetail()"/>
-      <!-- </ion-card> -->
+      </ion-card>
 
       <p class="item-name"><b>$34.00 &nbsp;&nbsp;men t-shirt</b></p>
     </ion-col>
     <ion-col size="6" class="ion-text-left">
-      <!-- <ion-card> -->
+      <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
         <img src="../../assets/tshirt2.jpg" (click)="goToProductDetail()"/>
-      <!-- </ion-card> -->
+      </ion-card>
 
       <p class="item-name"><b>$34.00 &nbsp;&nbsp;men t-shirt</b></p>
     </ion-col>
@@ -133,43 +112,43 @@
   <h1 class="title">{{ this.res }} Collection</h1>
   <ion-row class="favorite-items">
     <ion-col size="6" class="ion-text-left">
-      <!-- <ion-card> -->
+      <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
         <img src="../../assets/Kids-Cartoon-T-Shirt.jpg.jpg" (click)="goToProductDetail()"/>
-      <!-- </ion-card> -->
+      </ion-card>
       <p class="item-name"><b>$34.00 &nbsp;&nbsp;men t-shirt</b></p>
     </ion-col>
     <ion-col size="6" class="ion-text-left">
-      <!-- <ion-card> -->
+      <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
         <img src="../../assets/Kids-Long-Sleeves-T-Shirt.jpg.jpg" (click)="goToProductDetail()"/>
-      <!-- </ion-card> -->
+      </ion-card>
 
       <p class="item-name"><b>$34.00 &nbsp;&nbsp;men t-shirt</b></p>
       <h6></h6>
     </ion-col>
     <ion-col size="6" class="ion-text-left">
-      <!-- <ion-card> -->
+      <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
         <img src="../../assets/Kids-Long-Sleeves-T-Shirt.jpg.jpg" (click)="goToProductDetail()"/>
-      <!-- </ion-card> -->
+      </ion-card>
       <p class="item-name"><b>$34.00 &nbsp;&nbsp;men t-shirt</b></p>
     </ion-col>
     <ion-col size="6" class="ion-text-left">
-      <!-- <ion-card> -->
+      <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
         <img src="../../assets/Kids-Cartoon-T-Shirt.jpg.jpg" (click)="goToProductDetail()"/>
-      <!-- </ion-card> -->
+      </ion-card>
 
       <p class="item-name"><b>$34.00 &nbsp;&nbsp;men t-shirt</b></p>
     </ion-col>
     <ion-col size="6" class="ion-text-left">
-      <!-- <ion-card> -->
+      <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
         <img src="../../assets/kid1.png" (click)="goToProductDetail()"/>
-      <!-- </ion-card> -->
+      </ion-card>
 
       <p class="item-name"><b>$34.00 &nbsp;&nbsp;men t-shirt</b></p>
     </ion-col>
     <ion-col size="6" class="ion-text-left">
-      <!-- <ion-card> -->
+      <ion-card class="shadow-sm p-3 mb-5 bg-white rounded">
         <img src="../../assets/kid3.png" (click)="goToProductDetail()"/>
-      <!-- </ion-card> -->
+      </ion-card>
 
       <p class="item-name"><b>$34.00 &nbsp;&nbsp;men t-shirt</b></p>
     </ion-col>
