--- a/src/app/home/shop/shop-details/shop-details.component.html
+++ b/src/app/home/shop/shop-details/shop-details.component.html
@@ -1,26 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <!-- <button style="background: white" ion-button icon-only (click)="back()"> -->
-        <ion-icon class="h-icon" name="chevron-back-outline" (click)="back()"></ion-icon>
-      <!-- </button> -->
-    </ion-buttons>
+<app-header></app-header>
 
-    <div class="addressContent">
-      <ion-row>
-        <ion-col> </ion-col>
-      </ion-row>
-    </div>
-
-    <!-- <ion-searchbar class="custom" placeholder="Search Your Product"></ion-searchbar> -->
-    <ion-buttons slot="end" large>
-      <ion-icon class="h-icon" name="cart-sharp"></ion-icon>
-    </ion-buttons>
-    <ion-buttons slot="end" large>
-      <ion-icon class="h-icon" name="notifications-sharp"></ion-icon>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
 <ion-content>
   <ion-card class="main-card">
     <img
@@ -62,7 +41,7 @@
   </div>
 
   <div class="category-slider ion-padding-start">
-    <ion-slides
+    <ion-slides 
       [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }"
     >
       <ion-slide *ngFor="let category of categories">
@@ -74,15 +53,9 @@
     </ion-slides>
   </div>
 
-  <ion-slides pager="true" class="product-slider">
-    <ion-slide class="slide">
-      <img class="image-slide" src="../../assets/MicrosoftTeams-image.png" />
-    </ion-slide>
-    <ion-slide class="slide">
-      <img class="image-slide" src="../../assets/image1.jpg" />
-    </ion-slide>
-    <ion-slide class="slide">
-      <img class="image-slide" src="../../assets/image1.jpg" />
+  <ion-slides pager="true" class="product-slider" [options]="{ autoplay: {delay: 3500} }">
+    <ion-slide class="slide" *ngFor="let offer of offers">
+      <img class="image-slide" src={{offer.imgURL}} />
     </ion-slide>
   </ion-slides>
 
@@ -90,40 +63,18 @@
     <h4><b>Trending</b></h4>
   </div>
 
-  <ion-content>
-    <h1 class="title">Favorite</h1>
+  <!-- <ion-content> -->
+    <!-- <h1 class="title">Favorite</h1> -->
 
     <ion-row class="favorite-items" (click)="goToProductDetail()">
-      <ion-col size="6" class="ion-text-left">
-        <img src="../../assets/women-blazzer1.jpg" />
-        <p><b>$34.00 &nbsp;&nbsp;Women t-shirt</b></p>
-      </ion-col>
-      <ion-col size="6" class="ion-text-left">
-        <img src="../../assets/tshirt1.png" />
-
-        <p><b>$24.00 &nbsp;&nbsp;Mens t-shirt</b></p>
-        <h6></h6>
-      </ion-col>
-      <ion-col size="6" class="ion-text-left">
-        <img src="../../assets/Kids-Cartoon-T-Shirt.jpg.jpg" />
-
-        <p><b>$54.00 &nbsp;&nbsp;Women t-shirt</b></p>
-      </ion-col>
-      <ion-col size="6" class="ion-text-left">
-        <img src="../../assets/women-blazzer2.jpg" />
-
-        <p><b>$44.00 &nbsp;&nbsp;Blezer</b></p>
-      </ion-col>
-      <ion-col size="6" class="ion-text-left">
-        <img src="../../assets/tshirt1.png" />
-
-        <p><b>$44.00 &nbsp;&nbsp;Blezer</b></p>
-      </ion-col>
-      <ion-col size="6" class="ion-text-left">
-        <img src="../../assets/Kids-Cartoon-T-Shirt.jpg.jpg" />
-
-        <p><b>$44.00 &nbsp;&nbsp;Blezer</b></p>
-      </ion-col>
+      
+        <ion-col *ngFor="let product of products"  class="ion-text-left">
+          <ion-card class="shadow-sm p-3 mb-5 bg-white rounded product">
+            <img src={{product.link}} />
+            <p class="item-name"><b>$34.00 &nbsp;&nbsp;Women t-shirt</b></p>
+          </ion-card>
+        </ion-col>
+      
     </ion-row>
-  </ion-content>
+  <!-- </ion-content> -->
 </ion-content>
